--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,60 @@
-body {
-      margin: 0;
-      font-family: sans-serif;
-      display: flex;
-    }
+body{
+  height: 100vh;
+  background: var(--body-color);
+}
 
-    .sidebar {
-      width: 250px;
-      background-color: #f5f5f5;
-      height: 100vh;
-      padding: 1rem;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-      overflow-y: auto;
-    }
+/* Reusable css */
+.sidebar .name {
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--text-color);
+}
+.sidebar .image {
+  min-width: 60px;
+  display: flex;
+  align-items: center;
+}
 
-    .sidebar h2 {
-      font-size: 16px;
-      margin-bottom: 1rem;
-    }
+/* Sidebar */
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 250px;
+  padding: 10px 14px;
+  background: var(--sidebar-color);
+}
 
-    .nav-item {
-      padding: 8px 12px;
-      margin-bottom: 6px;
-      border-radius: 6px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      transition: background 0.2s;
-    }
+.sidebar button  {
+  position: relative;
+}
 
-    .nav-item:hover {
-      background-color: #e0e0e0;
-    }
+.sidebar .image-text img{
+  width: 40px;
+}
 
-    .icon {
-      margin-right: 8px;
-    }
-
-    .sub-items {
-      margin-left: 16px;
-      display: none;
-    }
-
-    .nav-item.open + .sub-items {
-      display: block;
-    }
+.sidebar .image-text {
+  display: flex;
+  align-items: center;
+  border: none;
+}
+.sidebar .image-text .name {
+  display: flex;
+  font-weight: 600;
+}
+.sidebar button .toggle {
+  position: absolute;
+  top: 50%;
+  right: -25px;
+  transform: translateY(-50%);
+  height: 25px;
+  width: 25px;
+  background: palegreen;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: white;
+  font-size: 22px;
+}
